@@ -1,3 +1,7 @@
+2015-03-04  Pedro Alves  <palves@redhat.com>
+
+	* gdb.threads/thread-specific-bp.exp: Delete "info threads" test.
+
 2015-03-04  Mark Kettenis  <kettenis@gnu.org>
 
 	* gdb.base/foll-fork.exp: Enable on *-*-openbsd*.
